infra/cdk.out.deploy/EvoUdsDevelopmentNetworkStack.template.json
{
 "Description": "EVO UDS Network Infrastructure",
 "Resources": {
  "EvoUdsVpcFE7C157B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/Resource"
   }
  },
  "EvoUdsVpcPublicSubnet1Subnet0DCFE8C5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1/Subnet"
   }
  },
  "EvoUdsVpcPublicSubnet1RouteTableBE0F1ACB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1/RouteTable"
   }
  },
  "EvoUdsVpcPublicSubnet1RouteTableAssociation2F36D8C1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcPublicSubnet1RouteTableBE0F1ACB"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPublicSubnet1Subnet0DCFE8C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "EvoUdsVpcPublicSubnet1DefaultRoute58D443E7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EvoUdsVpcIGW528C0F90"
    },
    "RouteTableId": {
     "Ref": "EvoUdsVpcPublicSubnet1RouteTableBE0F1ACB"
    }
   },
   "DependsOn": [
    "EvoUdsVpcVPCGW8A38E83B"
   ],
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "EvoUdsVpcPublicSubnet1EIPBC40C497": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1/EIP"
   }
  },
  "EvoUdsVpcPublicSubnet1NATGateway9CAFAAFF": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EvoUdsVpcPublicSubnet1EIPBC40C497",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPublicSubnet1Subnet0DCFE8C5"
    },
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ]
   },
   "DependsOn": [
    "EvoUdsVpcPublicSubnet1DefaultRoute58D443E7",
    "EvoUdsVpcPublicSubnet1RouteTableAssociation2F36D8C1"
   ],
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet1/NATGateway"
   }
  },
  "EvoUdsVpcPublicSubnet2SubnetA7FCBA81": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2/Subnet"
   }
  },
  "EvoUdsVpcPublicSubnet2RouteTable75989816": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2/RouteTable"
   }
  },
  "EvoUdsVpcPublicSubnet2RouteTableAssociationD404B267": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcPublicSubnet2RouteTable75989816"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPublicSubnet2SubnetA7FCBA81"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "EvoUdsVpcPublicSubnet2DefaultRoute9225EEE6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EvoUdsVpcIGW528C0F90"
    },
    "RouteTableId": {
     "Ref": "EvoUdsVpcPublicSubnet2RouteTable75989816"
    }
   },
   "DependsOn": [
    "EvoUdsVpcVPCGW8A38E83B"
   ],
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "EvoUdsVpcPublicSubnet2EIPD5054F2C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2/EIP"
   }
  },
  "EvoUdsVpcPublicSubnet2NATGateway836B6760": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EvoUdsVpcPublicSubnet2EIPD5054F2C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPublicSubnet2SubnetA7FCBA81"
    },
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ]
   },
   "DependsOn": [
    "EvoUdsVpcPublicSubnet2DefaultRoute9225EEE6",
    "EvoUdsVpcPublicSubnet2RouteTableAssociationD404B267"
   ],
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet2/NATGateway"
   }
  },
  "EvoUdsVpcPublicSubnet3Subnet6E6E9DC6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet3"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet3/Subnet"
   }
  },
  "EvoUdsVpcPublicSubnet3RouteTable28913D18": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet3"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet3/RouteTable"
   }
  },
  "EvoUdsVpcPublicSubnet3RouteTableAssociation8E21F6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcPublicSubnet3RouteTable28913D18"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPublicSubnet3Subnet6E6E9DC6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "EvoUdsVpcPublicSubnet3DefaultRouteFB0C033D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EvoUdsVpcIGW528C0F90"
    },
    "RouteTableId": {
     "Ref": "EvoUdsVpcPublicSubnet3RouteTable28913D18"
    }
   },
   "DependsOn": [
    "EvoUdsVpcVPCGW8A38E83B"
   ],
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PublicSubnet3/DefaultRoute"
   }
  },
  "EvoUdsVpcPrivateSubnet1SubnetAFC3BF0A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet1/Subnet"
   }
  },
  "EvoUdsVpcPrivateSubnet1RouteTable3A15E6E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet1/RouteTable"
   }
  },
  "EvoUdsVpcPrivateSubnet1RouteTableAssociation7D99A787": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcPrivateSubnet1RouteTable3A15E6E5"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPrivateSubnet1SubnetAFC3BF0A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "EvoUdsVpcPrivateSubnet1DefaultRoute1A5E78AF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EvoUdsVpcPublicSubnet1NATGateway9CAFAAFF"
    },
    "RouteTableId": {
     "Ref": "EvoUdsVpcPrivateSubnet1RouteTable3A15E6E5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "EvoUdsVpcPrivateSubnet2SubnetCBF8E2B0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet2/Subnet"
   }
  },
  "EvoUdsVpcPrivateSubnet2RouteTable79BA2837": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet2/RouteTable"
   }
  },
  "EvoUdsVpcPrivateSubnet2RouteTableAssociation5B699A22": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcPrivateSubnet2RouteTable79BA2837"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPrivateSubnet2SubnetCBF8E2B0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "EvoUdsVpcPrivateSubnet2DefaultRouteC84536E3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EvoUdsVpcPublicSubnet2NATGateway836B6760"
    },
    "RouteTableId": {
     "Ref": "EvoUdsVpcPrivateSubnet2RouteTable79BA2837"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "EvoUdsVpcPrivateSubnet3SubnetB22A6AC0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet3"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet3/Subnet"
   }
  },
  "EvoUdsVpcPrivateSubnet3RouteTableF2B1089A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet3"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet3/RouteTable"
   }
  },
  "EvoUdsVpcPrivateSubnet3RouteTableAssociation47D53797": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcPrivateSubnet3RouteTableF2B1089A"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcPrivateSubnet3SubnetB22A6AC0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "EvoUdsVpcPrivateSubnet3DefaultRouteBEAD02DC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EvoUdsVpcPublicSubnet1NATGateway9CAFAAFF"
    },
    "RouteTableId": {
     "Ref": "EvoUdsVpcPrivateSubnet3RouteTableF2B1089A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "EvoUdsVpcDatabaseSubnet1SubnetA59A562B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.6.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet1/Subnet"
   }
  },
  "EvoUdsVpcDatabaseSubnet1RouteTable0815AE1E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet1/RouteTable"
   }
  },
  "EvoUdsVpcDatabaseSubnet1RouteTableAssociation08C9ECAF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcDatabaseSubnet1RouteTable0815AE1E"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcDatabaseSubnet1SubnetA59A562B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet1/RouteTableAssociation"
   }
  },
  "EvoUdsVpcDatabaseSubnet2Subnet47FED35C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.6.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet2/Subnet"
   }
  },
  "EvoUdsVpcDatabaseSubnet2RouteTableF42AEC75": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet2/RouteTable"
   }
  },
  "EvoUdsVpcDatabaseSubnet2RouteTableAssociation37C96865": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcDatabaseSubnet2RouteTableF42AEC75"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcDatabaseSubnet2Subnet47FED35C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet2/RouteTableAssociation"
   }
  },
  "EvoUdsVpcDatabaseSubnet3SubnetC5D6D41A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.6.32/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet3"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet3/Subnet"
   }
  },
  "EvoUdsVpcDatabaseSubnet3RouteTable9287B062": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet3"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet3/RouteTable"
   }
  },
  "EvoUdsVpcDatabaseSubnet3RouteTableAssociation9C108F6D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EvoUdsVpcDatabaseSubnet3RouteTable9287B062"
    },
    "SubnetId": {
     "Ref": "EvoUdsVpcDatabaseSubnet3SubnetC5D6D41A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DatabaseSubnet3/RouteTableAssociation"
   }
  },
  "EvoUdsVpcIGW528C0F90": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/IGW"
   }
  },
  "EvoUdsVpcVPCGW8A38E83B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "EvoUdsVpcIGW528C0F90"
    },
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/VPCGW"
   }
  },
  "EvoUdsVpcRestrictDefaultSecurityGroupCustomResource43DA3C19": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "EvoUdsVpcFE7C157B",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "383234048592"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "EvoUdsVpcS3Endpoint22CBEB2B": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "EvoUdsVpcPrivateSubnet1RouteTable3A15E6E5"
     },
     {
      "Ref": "EvoUdsVpcPrivateSubnet2RouteTable79BA2837"
     },
     {
      "Ref": "EvoUdsVpcPrivateSubnet3RouteTableF2B1089A"
     },
     {
      "Ref": "EvoUdsVpcPublicSubnet1RouteTableBE0F1ACB"
     },
     {
      "Ref": "EvoUdsVpcPublicSubnet2RouteTable75989816"
     },
     {
      "Ref": "EvoUdsVpcPublicSubnet3RouteTable28913D18"
     },
     {
      "Ref": "EvoUdsVpcDatabaseSubnet1RouteTable0815AE1E"
     },
     {
      "Ref": "EvoUdsVpcDatabaseSubnet2RouteTableF42AEC75"
     },
     {
      "Ref": "EvoUdsVpcDatabaseSubnet3RouteTable9287B062"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/S3Endpoint/Resource"
   }
  },
  "EvoUdsVpcDynamoDBEndpointE9E7A0BC": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "EvoUdsVpcPrivateSubnet1RouteTable3A15E6E5"
     },
     {
      "Ref": "EvoUdsVpcPrivateSubnet2RouteTable79BA2837"
     },
     {
      "Ref": "EvoUdsVpcPrivateSubnet3RouteTableF2B1089A"
     },
     {
      "Ref": "EvoUdsVpcPublicSubnet1RouteTableBE0F1ACB"
     },
     {
      "Ref": "EvoUdsVpcPublicSubnet2RouteTable75989816"
     },
     {
      "Ref": "EvoUdsVpcPublicSubnet3RouteTable28913D18"
     },
     {
      "Ref": "EvoUdsVpcDatabaseSubnet1RouteTable0815AE1E"
     },
     {
      "Ref": "EvoUdsVpcDatabaseSubnet2RouteTableF42AEC75"
     },
     {
      "Ref": "EvoUdsVpcDatabaseSubnet3RouteTable9287B062"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/EvoUdsVpc/DynamoDBEndpoint/Resource"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:383234048592:security-group/",
             {
              "Fn::GetAtt": [
               "EvoUdsVpcFE7C157B",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-383234048592-us-east-1",
     "S3Key": "7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474",
    "aws:asset:property": "Code"
   }
  },
  "LambdaSecurityGroup0BD9FC99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Lambda functions",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/LambdaSecurityGroup/Resource"
   }
  },
  "RdsSecurityGroup632A77E4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "DeployedAt",
      "Value": "2025-12-24T17:22:44.314Z"
     },
     {
      "Key": "Environment",
      "Value": "development"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "EVO-UDS"
     }
    ],
    "VpcId": {
     "Ref": "EvoUdsVpcFE7C157B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/RdsSecurityGroup/Resource"
   }
  },
  "RdsSecurityGroupfromEvoUdsDevelopmentNetworkStackLambdaSecurityGroupA9566C5E5432F9C3D76D": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Lambda to connect to PostgreSQL",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "RdsSecurityGroup632A77E4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/RdsSecurityGroup/from EvoUdsDevelopmentNetworkStackLambdaSecurityGroupA9566C5E:5432"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32OwW6DQAxEvyX3ZUtQfwChKMqlQVBxrZbFoU7Ai9ZeUBTl3ysaBKf2NDPPI2sSvY9jHe/MxJFtblGHtX6UYuxNmYm/wCb6UQ1WZReq8kzloe7QlqEmkJltrnBB4NPUHWx8Yymzs2gEHa3l2RxO+SwfRo5GYDJ3lXscjcD2+EQCnmAtvJYsKRUx9rsHErWQarAHagaHJEt1jSXY4FHuR+/C8LvyX3Ci1gPzUxXALngLKgssrt/ihf445d6N2IBXKTNIKaZFauf+OcgQ5KnINaCv/DYm73qf6Hh3ZcTIBxLsQRcv/QGVkfoSnAEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "EvoUdsDevelopmentNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "EvoUdsVpcFE7C157B"
   }
  },
  "LambdaSecurityGroupId": {
   "Description": "Lambda Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   }
  },
  "RdsSecurityGroupId": {
   "Description": "RDS Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "RdsSecurityGroup632A77E4",
     "GroupId"
    ]
   }
  },
  "ExportsOutputRefEvoUdsVpcDatabaseSubnet1SubnetA59A562B7E74C26F": {
   "Value": {
    "Ref": "EvoUdsVpcDatabaseSubnet1SubnetA59A562B"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcDatabaseSubnet1SubnetA59A562B7E74C26F"
   }
  },
  "ExportsOutputRefEvoUdsVpcDatabaseSubnet2Subnet47FED35C88D94764": {
   "Value": {
    "Ref": "EvoUdsVpcDatabaseSubnet2Subnet47FED35C"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcDatabaseSubnet2Subnet47FED35C88D94764"
   }
  },
  "ExportsOutputRefEvoUdsVpcDatabaseSubnet3SubnetC5D6D41AB577997F": {
   "Value": {
    "Ref": "EvoUdsVpcDatabaseSubnet3SubnetC5D6D41A"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcDatabaseSubnet3SubnetC5D6D41AB577997F"
   }
  },
  "ExportsOutputRefEvoUdsVpcFE7C157B8508BA0F": {
   "Value": {
    "Ref": "EvoUdsVpcFE7C157B"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcFE7C157B8508BA0F"
   }
  },
  "ExportsOutputRefEvoUdsVpcPrivateSubnet1SubnetAFC3BF0AA71F342C": {
   "Value": {
    "Ref": "EvoUdsVpcPrivateSubnet1SubnetAFC3BF0A"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcPrivateSubnet1SubnetAFC3BF0AA71F342C"
   }
  },
  "ExportsOutputRefEvoUdsVpcPrivateSubnet2SubnetCBF8E2B0EABA0082": {
   "Value": {
    "Ref": "EvoUdsVpcPrivateSubnet2SubnetCBF8E2B0"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcPrivateSubnet2SubnetCBF8E2B0EABA0082"
   }
  },
  "ExportsOutputRefEvoUdsVpcPrivateSubnet3SubnetB22A6AC041A6E27F": {
   "Value": {
    "Ref": "EvoUdsVpcPrivateSubnet3SubnetB22A6AC0"
   },
   "Export": {
    "Name": "EvoUdsDevelopmentNetworkStack:ExportsOutputRefEvoUdsVpcPrivateSubnet3SubnetB22A6AC041A6E27F"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
